GNU tar NEWS - User visible changes. 2016-05-27
Please send GNU tar bug reports to <bug-tar@gnu.org>


version 1.29.90 (Git)

* Report erroneous use of positional options.

During archive creation or update, tar keeps track of positional
options (see the manual, subsection 3.4.4 "Position-Sensitive
Options"), and reports those that had no effect.  For example, when
invoked as

   tar -cf a.tar . --exclude '*.o'

tar will create the archive, but will exit with status 2, having
issued the following error message   

   tar: The following options were used after any non-optional
   arguments in archive create or update mode.  These options are
   positional and affect only arguments that follow them.  Please,
   rearrange them properly.
   tar: --exclude '*.o' has no effect
   tar: Exiting with failure status due to previous errors
   

version 1.29 - Sergey Poznyakoff, 2016-05-16

* New options: --verbatim-files-from, --no-verbatim-files-from

The --verbatim-files-from option instructs tar to treat each line read
from a file list as a file name, even if it starts with a dash.

File lists are supplied with the --files-from (-T) option.  By
default, each line read from a file list is first stripped off the
leading and trailing whitespace and, if the result begins with a dash,
it is treated as tar command line option.

Use the --verbatim-files-from option to disable this special handling.
This facilitates the use of tar with file lists created automatically
(e.g. by find(1) command).

This option affects all --files-from options that occur after it in
the command line.  Its effect is reverted by the
--no-verbatim-files-from option.

* --null option reads file names verbatim

The --null option implies --verbatim-files-from.  I.e. each line 
read from null-delimited file lists is treated as a file name.

This restores the documented behavior, which was broken in version
1.27.

* New options: --owner-map=FILE and --group-map=FILE
